package-update/overlays/test/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: package-update-faust-web
spec:
  to:
    kind: Service
    name: package-update-faust-web
